시간에 대한 이벤트 추가

--- a/dropdown-practice/index.html
+++ b/dropdown-practice/index.html
@@ -16,10 +16,10 @@
         </div>
         <div class="dropdown-scroll-hider" v-show="isDropdownShow" style="display: block; transform: translateY(0px);">
             <div class="dropdown-container" style="display: block;">
-                <div class="text-label-container" :data-val="labelText.TICKET_MONTH_LIST" @click="chooseTextLabel(index, $event)" v-for="(labelText, index) in labelTextList"
-                    :key="labelText.TICKET_MONTH_LIST">
+                <div class="text-label-container" :data-val="labelText" @click="chooseTextLabel(index, $event)" v-for="(labelText, index) in labelTextList"
+                    :key="index">
                     <label class="dateTicket-text-label">
-                        {{labelText.YEAR}}년 {{labelText.MONTH}}월
+                        {{labelText}}
                     </label>
                 </div>
             </div>
@@ -50,9 +50,9 @@
                         <input type="hidden" id="date-popup-item-id" name="item_id" value="" />
                         <div class="dateticket-list" style="display: none;"></div>
                         <div id="selector-container">
-                            <dropdown-template :title-message="monthTitle" :title-show="true" :label-text-list="labelTextList" @choose="chooseDropdownLabel"></dropdown-template>
-                            <dropdown-template title-message="날짜를 선택하세요."></dropdown-template>
-                            <dropdown-template title-message="관람시간을 선택하세요."></dropdown-template>
+                            <dropdown-template key="month" :title-message="monthTitle" :title-show="true" :label-text-list="monthLabelList" @choose="chooseDropdownLabel"></dropdown-template>
+                            <dropdown-template key="date" :title-message="dateTitle" :title-show="dateTitleShow" :label-text-list="dateLabelList" @choose="chooseDropdownLabel"></dropdown-template>
+                            <dropdown-template key="time" :title-message="timeTitle" :title-show="timeTitleShow" :label-text-list="timeLabelList" @choose="chooseDropdownLabel"></dropdown-template>
                             <dropdown-template title-message="옵션을 선택하세요."></dropdown-template>
                         </div>
                     </form>
@@ -63,69 +63,7 @@
             </div>
         </div>
     </div>
-    <script>
-        Vue.component('dropdown-template', {
-            template: '#dropdown-template',
-            data: function () {
-                return {
-                    isDropdownShow: false
-                }
-            },
-            props: {
-                'titleMessage': {
-                    type: String,
-                    required: true
-                },
-                'titleShow': {
-                    type: Boolean,
-                    default: function () {
-                        return false;
-                    }
-                },
-                'labelTextList': Array
-            },
-            methods: {
-                dropdownShow(e) {
-                    if (e.currentTarget.className == 'dropdown-title') {
-                        this.isDropdownShow = !this.isDropdownShow;
-                    }
-                },
-                chooseTextLabel(i, e) {
-                    this.isDropdownShow = false;
-                    this.$emit('choose', this.labelTextList[i]);
-                }
-            }
-        });
-
-        var app = new Vue({
-            el: '#app',
-            data: {
-                monthTitle: "월을 입력하세요.",
-                monthTitleShow: true,
-                classObject: {
-                    'show-ticket': false
-                },
-                labelTextList: [
-                    { "MONTH": 7, "YEAR": "2018", "TICKET_MONTH_LIST": "2018-07" }, 
-                    { "MONTH": 8, "YEAR": "2018", "TICKET_MONTH_LIST": "2018-08" }, 
-                    { "MONTH": 9, "YEAR": "2018", "TICKET_MONTH_LIST": "2018-09" },
-                    { "MONTH": 10, "YEAR": "2018", "TICKET_MONTH_LIST": "2018-10" }, 
-                    { "MONTH": 11, "YEAR": "2018", "TICKET_MONTH_LIST": "2018-11" }
-                    ]
-            },
-            methods: {
-                showTicketPopup() {
-                    this.classObject['show-ticket'] = true;
-                },
-                closeTicketPopup() {
-                    this.classObject['show-ticket'] = false;
-                },
-                chooseDropdownLabel(labelText){
-                    this.monthTitle = `${labelText.YEAR}년 ${labelText.MONTH}월`;
-                }
-            }
-        })
-    </script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
