--- a/dropdown-practice/index.html
+++ b/dropdown-practice/index.html
@@ -53,7 +53,7 @@
                             <dropdown-template key="month" :title-message="monthTitle" :title-show="true" :label-text-list="monthLabelList" @choose="chooseDropdownLabel"></dropdown-template>
                             <dropdown-template key="date" :title-message="dateTitle" :title-show="dateTitleShow" :label-text-list="dateLabelList" @choose="chooseDropdownLabel"></dropdown-template>
                             <dropdown-template key="time" :title-message="timeTitle" :title-show="timeTitleShow" :label-text-list="timeLabelList" @choose="chooseDropdownLabel"></dropdown-template>
-                            <dropdown-template title-message="옵션을 선택하세요."></dropdown-template>
+                            <dropdown-template key="option" :title-message="optionTitle" :title-show="optionTitleShow" :label-text-list="optionLabelList" @choose="chooseDropdownLabel"></dropdown-template>
                         </div>
                     </form>
                 </div>
