--- a/dropdown-practice/index.html
+++ b/dropdown-practice/index.html
@@ -50,10 +50,10 @@
                         <input type="hidden" id="date-popup-item-id" name="item_id" value="" />
                         <div class="dateticket-list" style="display: none;"></div>
                         <div id="selector-container">
-                            <dropdown-template key="month" :title-message="monthTitle" :title-show="true" :label-text-list="monthLabelList" @choose="chooseDropdownLabel"></dropdown-template>
-                            <dropdown-template key="date" :title-message="dateTitle" :title-show="dateTitleShow" :label-text-list="dateLabelList" @choose="chooseDropdownLabel"></dropdown-template>
-                            <dropdown-template key="time" :title-message="timeTitle" :title-show="timeTitleShow" :label-text-list="timeLabelList" @choose="chooseDropdownLabel"></dropdown-template>
-                            <dropdown-template key="option" :title-message="optionTitle" :title-show="optionTitleShow" :label-text-list="optionLabelList" @choose="chooseDropdownLabel"></dropdown-template>
+                            <dropdown-template key="month" :title-message="monthTitle" :drop-down-show="monthDropdownShow" :title-show="monthTitleShow" :label-text-list="monthLabelList" @choose="chooseDropdownLabel"></dropdown-template>
+                            <dropdown-template key="date" :title-message="dateTitle" :drop-down-show="dateDropdownShow" :title-show="dateTitleShow" :label-text-list="dateLabelList" @choose="chooseDropdownLabel"></dropdown-template>
+                            <dropdown-template key="time" :title-message="timeTitle" :drop-down-show="timeDropdownShow" :title-show="timeTitleShow" :label-text-list="timeLabelList" @choose="chooseDropdownLabel"></dropdown-template>
+                            <dropdown-template key="option" :title-message="optionTitle" :drop-down-show="optionDropdownShow" :title-show="optionTitleShow" :label-text-list="optionLabelList" @choose="chooseDropdownLabel"></dropdown-template>
                         </div>
                     </form>
                 </div>
