--- a/dropdown-practice/index.html
+++ b/dropdown-practice/index.html
@@ -11,10 +11,10 @@
 </head>
 <template id="dropdown-template">
     <div class="dropdown">
-        <div :class="{'disabled-dropdown':!titleShow, 'dropdown-title': titleShow}" @click="dropdownShow">
+        <div :class="{'disabled-dropdown':!titleShow, 'dropdown-title': titleShow}" @click="disabledDropdown">
             <label class="title-label">{{titleMessage}}</label>
         </div>
-        <div class="dropdown-scroll-hider" v-show="isDropdownShow" style="display: block; transform: translateY(0px);">
+        <div class="dropdown-scroll-hider" v-show="isDropDownShow" style="display: block; transform: translateY(0px);">
             <div class="dropdown-container" style="display: block;">
                 <div class="text-label-container" :data-val="labelText" @click="chooseTextLabel(index, $event)" v-for="(labelText, index) in labelTextList"
                     :key="index">
@@ -50,10 +50,10 @@
                         <input type="hidden" id="date-popup-item-id" name="item_id" value="" />
                         <div class="dateticket-list" style="display: none;"></div>
                         <div id="selector-container">
-                            <dropdown-template key="month" :title-message="monthTitle" :drop-down-show="monthDropdownShow" :title-show="monthTitleShow" :label-text-list="monthLabelList" @choose="chooseDropdownLabel"></dropdown-template>
-                            <dropdown-template key="date" :title-message="dateTitle" :drop-down-show="dateDropdownShow" :title-show="dateTitleShow" :label-text-list="dateLabelList" @choose="chooseDropdownLabel"></dropdown-template>
-                            <dropdown-template key="time" :title-message="timeTitle" :drop-down-show="timeDropdownShow" :title-show="timeTitleShow" :label-text-list="timeLabelList" @choose="chooseDropdownLabel"></dropdown-template>
-                            <dropdown-template key="option" :title-message="optionTitle" :drop-down-show="optionDropdownShow" :title-show="optionTitleShow" :label-text-list="optionLabelList" @choose="chooseDropdownLabel"></dropdown-template>
+                            <dropdown-template key="month" :title-message="monthTitle" :drop-down-show="monthDropdownShow" :title-show="monthTitleShow" :label-text-list="monthLabelList" @choose="chooseDropdownLabel" @disabled="dropDowndisabled"></dropdown-template>
+                            <dropdown-template key="date" :title-message="dateTitle" :drop-down-show="dateDropdownShow" :title-show="dateTitleShow" :label-text-list="dateLabelList" @choose="chooseDropdownLabel" @disabled="dropDowndisabled"></dropdown-template>
+                            <dropdown-template key="time" :title-message="timeTitle" :drop-down-show="timeDropdownShow" :title-show="timeTitleShow" :label-text-list="timeLabelList" @choose="chooseDropdownLabel" @disabled="dropDowndisabled"></dropdown-template>
+                            <dropdown-template key="option" :title-message="optionTitle" :drop-down-show="optionDropdownShow" :title-show="optionTitleShow" :label-text-list="optionLabelList" @choose="chooseDropdownLabel" @disabled="dropDowndisabled"></dropdown-template>
                         </div>
                     </form>
                 </div>
