--- a/dropdown-practice/index.html
+++ b/dropdown-practice/index.html
@@ -39,9 +39,9 @@
             <div class="dateticket-price-wrapper"><del class="dateticket_price">{{dateTicketText.PRICE}}원&nbsp;</del>&nbsp;&nbsp;<span class="dateticket-selling-price">{{dateTicketText.SELLING_PRICE}}</span>원</div>
         </div>
         <div class="dateticket-btn-wrapper">	
-            <button class="btn btn-link dateticket-cnt-minus"><img class="dateticekt-amount-btn" src="./images/front/ic_minus_gray.svg"></button>
+            <button class="btn btn-link dateticket-cnt-minus" @click.prevent="sellingPriceMinus"><img class="dateticekt-amount-btn" src="./images/front/ic_minus_gray.svg"></button>
             <label class="dateticket-sold-cnt-label">1</label>
-            <button class="btn btn-link dateticket-cnt-plus"><img class="dateticekt-amount-btn" src="./images/front/ic_plus_gray.svg"></button>
+            <button class="btn btn-link dateticket-cnt-plus" @click.prevent="sellingPricePlus"><img class="dateticekt-amount-btn" src="./images/front/ic_plus_gray.svg"></button>
         </div>
     </div>
 </template>
@@ -68,7 +68,7 @@
                     <form action="/orderPayments" method="post" id="date-ticket-form">
                         <input type="hidden" id="date-popup-item-id" name="item_id" value="" />
                         <div class="dateticket-list" style="display: none;" v-show="isAppendedTicket">
-                                <dateticket-panel :date-ticket-text="dateTicket" v-for="dateTicket in dateTicketList" :key="dateTicket.TICKET_ID"></dateticket-panel>
+                                <dateticket-panel :date-ticket-text="dateTicket" v-for="dateTicket in dateTicketList" :key="dateTicket.TICKET_ID" @plus="sellingPricePlus" @minus="sellingPriceMinus"></dateticket-panel>
                         </div>
                         <div id="selector-container">
                             <dropdown-template key="month" :title-message="monthTitle" :drop-down-show="monthDropdownShow" :title-show="monthTitleShow" :label-text-list="monthLabelList" @choose="chooseDropdownLabel" @disabled="dropDowndisabled"></dropdown-template>
